# manip

./: .gitignore  .gitmodules  LICENSE  README  README.md  project.clj
arduino/dynamixel/: DynamixelSerial1.cpp  StringStream.cpp  StringStream.h  dynamixel.ino
cpp/: .gitignore  CMakeLists.txt  FindOpenCV.cmake  aruco_tracker.cpp
cpp/aruco/: libaruco.dylib
helix/: ARCHITECTURE.md  CMakeLists.txt  MacBookAir5,2.yml  README.md  T.m  acquire.cpp  acquire.h  circfit.m  circfitrobust.m  concurrent_queue.h  crossm.m  deltas.m  draw.m  find_center.m  fit.m  fitter.cpp  fitter.h  flexvideo.cpp  flexvideo.h  geometry.cpp  geometry.h  graphics.cpp  graphics.h  kinect.cpp  kinect.h  makehelix.m  packet.h  processor.cpp  processor.h  read.m  replay.m  test_geometry.cpp  watcher.cpp  watcher.h  writer.cpp  writer.h
js/: AR_mediaStream.html
js/AR_mediaStream_files/: JSARToolKit.js.pagespeed.jm.GFNH6_jM_x.js  ga.js  magi.js.pagespeed.jm.AJxVGUpjxP.js  photos.js.pagespeed.jm.5APXXL9PLR.js  utils.js.pagespeed.jm.TXVjeF_BBR.js
lua/: .gitignore  data.lua  geometry.lua  joints.lua  kinematics.lua  learn.lua  params.lua  replay.lua  test.lua  testmod.lua  utils.lua
lua/functional/: infinite_list.lua  list.lua  misc.lua  operators.lua
matlab/: .gitignore  R.m  SE_dist.m  T.m  ar.mat  calc_deltas.m  draw_tree.m  extract_SE.m  fixup_indices.m  format_SE.m  forward_prismatic.m  forward_revolute.m  forward_rigid.m  forward_screw.m  guess_prismatic.m  guess_revolute.m  guess_rigid.m  guess_screw.m  gui.fig  gui.m  helfit.m  helfit2.m  inverse_prismatic.m  inverse_revolute.m  inverse_rigid.m  inverse_screw.m  jointfit.m  log.20121103  logm_so3.m  manip_fillout.m  manip_fudge.m  manip_learn.m  manip_read.m  manip_robot.m  manip_simulate.m  manip_splat.m  manip_test.m  manip_visualize.m  move_prismatic.m  move_revolute.m  (+13 more)
matlab/matGeom/html/: index.html
matlab/matGeom/html/matGeom/: Contents.html  index.html  setupMatGeom.html
matlab/matGeom/html/matGeom/geom2d/: Contents.html  angle2Points.html  angle3Points.html  angleAbsDiff.html  angleDiff.html  angleSort.html  angles2d.html  bisector.html  boundingBox.html  boxToRect.html  boxes2d.html  cartesianLine.html  centeredEdgeToEdge.html  centroid.html  circleArcAsCurve.html  circleArcToPolyline.html  circleAsPolygon.html  circleToPolygon.html  circles2d.html  circumCenter.html  circumCircle.html  clipEdge.html  clipLine.html  clipLineRect.html  clipPoints.html  clipRay.html  crackPattern.html  crackPattern2.html  createBasisTransform.html  createCircle.html  createDirectedCircle.html  createEdge.html  createHomothecy.html  createLine.html  createLineReflection.html  createMedian.html  createRay.html  (+117 more)
matlab/mex/: Rmex.c  SEmex.c  Tmex.c  gen_jacobians.c  mex_forward_prismatic.c  mex_forward_revolute.c  mex_forward_rigid.c  mex_inverse_prismatic.c  mex_inverse_revolute.c  mex_inverse_rigid.c
paper/: .gitignore  root.tex  spheres.inc  tikz-parallelepiped.inc
paper/icra2014/: research.bib  root.tex  root_ddl.tex
paper/icra2014/img/: screenshot.tiff
paper/img/: exp1_1.eps
paper/iros2013/: 3dplot.sty
paper/iros2013/img/: exp1_2.eps  exp1_4.eps  exp2b.eps
paper/journal_club2013/: presentation.tex
paper/journal_club2013/pres_img/: fig-exp1.tiff  yan.tiff
paper/nips2013/: nips2013.tex
paper/pres_img/: katz.tiff  screenshot.tiff  sturm.tiff
paper/warv2014/: llncs.cls  llncs.doc  llncs.dvi  typeinst.tex  verbatim.sty
py/: dynacli.py  jointdefs.dcl
src/manip/: capture.clj  core.clj
test/manip/test/: core.clj
(+352 files in other folders)
